# SCNet

./: README.md  pyproject.toml  requirements.txt
conf/: config.yaml
scnet/: solver.py  train.py  wav.py
tests/: test_wav_dataset.py
